# geo-facilitator-ai

./: README.md  docker-compose.yml  dockerfile  index.html  package-lock.json  package.json  pyproject.toml  start.sh  vite.config.js
audio_to_geodata/: app.py  dotenv_sample.txt  function_calling.py  main.py  main_string_query.py  speech_to_text.py  tools.py
audio_to_geodata/data/: large_building.m4a  shortest_path.m4a  sunshine.m4a  sunshine_avenue.m4a  tokyo_station.m4a  tokyo_station2.m4a
public/: hakusan_lines.json  ikebukuro_building.json  jsontest.geo.json
src/: CommentApp.jsx  MapApp.jsx  comment.jsx  map.jsx  whisper.js
